added git ignor files

--- a/nri-megamart/pom.xml
+++ b/nri-megamart/pom.xml
@@ -24,9 +24,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.nirprime.beans</groupId>
-			<artifactId>prime-beans</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<groupId>com.nriprime.beans</groupId>
+	<artifactId>prime-beans</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
