--- a/prime-beans/pom.xml
+++ b/prime-beans/pom.xml
@@ -8,7 +8,7 @@
 		<artifactId>NRIPrimeApplication</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<groupId>com.nirprime.beans</groupId>
+	<groupId>com.nriprime.beans</groupId>
 	<artifactId>prime-beans</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>prime-beans</name>
