updated json property names

--- a/nri-megamart/src/main/resources/application.properties
+++ b/nri-megamart/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # Applicationn context name
 server.contextPath=/nriprime
-
+server.servlet.context-path=/nriprime
+server.port=8080
 # Spring MVC rleated
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
@@ -24,6 +25,9 @@ prime.image.ext= .jpg
 prime.enquiry.template.path=./src/main/resources/static/templates/
 prime.enquiry.template.name=enquiry.html
 
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration, org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
+
+
 spring.datasource.url = jdbc:mysql://localhost:3306/nriprime
 spring.datasource.username = vallala
 spring.datasource.password = vallala
@@ -33,4 +37,4 @@ spring.datasource.validationQuery = SELECT 1
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
