--- a/nri-megamart/pom.xml
+++ b/nri-megamart/pom.xml
@@ -8,6 +8,7 @@
 		<artifactId>NRIPrimeApplication</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
+	<packaging>war</packaging>
 	<groupId>com.nri.megamart</groupId>
 	<artifactId>nri-megamart</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -20,24 +21,23 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.nriprime.beans</groupId>
-	<artifactId>prime-beans</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+			<artifactId>prime-beans</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
+			 <version>8.0.11</version>
 			<scope>runtime</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa -->
 		<dependency>
-			<groupId>org.springframework.data</groupId>
-			<artifactId>spring-data-jpa</artifactId>
-			<version>2.0.2.RELEASE</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
